<resources>
    <string name="app_name">LAN File Server</string>
    <string name="btn_start">Start Server</string>
    <string name="btn_stop">Stop Server</string>
    <string name="status_stopped">Server stopped</string>
    <string name="status_starting">Starting…</string>
    <string name="status_running">Server running</string>
    <string name="status_error">Error</string>
    <string name="label_sharing">Sharing:</string>
    <string name="hint_tap_to_copy">Tap URL to copy</string>
</resources>
